--- a/ElevenNote.WebMVC/Views/Category/Index.cshtml
+++ b/ElevenNote.WebMVC/Views/Category/Index.cshtml
@@ -35,7 +35,7 @@
                 @Html.DisplayFor(modelItem => item.CategoryName)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { id=item.CategoryId}) |
+                @*@Html.ActionLink("Edit", "Edit", new { id=item.CategoryId}) |*@
                 @Html.ActionLink("Details", "Details", new { id = item.CategoryId }) |
                 @Html.ActionLink("Delete", "Delete", new { id = item.CategoryId })
             </td>
